# OpenPNM

./: .buildinfo  .coverage  .coveragerc  .editorconfig  .gitignore  .travis.yml  2020_10_01_16_33_25.wrk  CHANGELOG.md  CHANGELOG.rst  CITATION.cff  CNAME  CODE_OF_CONDUCT.md  DEV_GUIDE.md  Demo.ipynb  Gostick Notebook.ipynb  Gostick Notebook.py  Gostick_Tutorial.ipynb  LICENSE  LICENSE.txt  Makefile  MassTransfer.vtp  OpenPNM_install.py  README.md  README.rst  RMSEtest.py  VERSIONING.md  Wu Tutorial-updated to NewPNM (1).py  Wu Tutorial-updated to NewPNM.ipynb  _transformations.py  appveyor.yml  archive.py  basic_usage.html  changelog.md  citation.html  codecov.yml  conda_requirements.txt  directionalrelpermc.py  env.sh  env.yml  environment.yml  (+89 more)
.github/: release.yml
LocalFiles/: OpenPNM_net_SGL_25BA_Closed_with_cracked_mpl_190001.mat  example_network.mat  run_script_JH.py
OpenPNM/: Graphics.py  Shortcuts.py  __Base__.py  __Core__.py  __init__.py  _version.py  run_script_DG.py
_examples/: applications.html  index.html  reference.html  tutorials.html
_modules/: auto_all.html  collections.html  docrep.html  index.html  pathlib.html
_sources/: basic_usage.rst.txt  examples.rst.txt  index.rst.txt  userguide.rst.txt
_static/: documentation_options.js
article recreation/: Wu_Tutorial.ipynb  gostick_recreation.py  gostick_recreation2.py  wu_recreation.py
docs/: Makefile  _conf.py  basic_usage.rst  citation.rst  conf.py  developer_guide.rst  docExtraSidebar.rst  docInstall.rst  docOpenPNM.rst  docSandbox.rst  examples.rst  examples_index.rst  examples_linker.py  (+5 more)
(+2902 files in other folders)
