[bumpversion]
current_version = 3.0.0.dev1
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)\.(?P<release>\D+)(?P<build>\d+)?
serialize = {major}.{minor}.{patch}.{release}{build}

[bumpversion:part:release]
values = dev

[bumpversion:part:build]
first_value = 0

[tool:pytest]
flake8-max-line-length = 90
flake8-ignore =
    *.py D100,E226,F403,N806,W503,WPS111,WPS211,WPS237,WPS300,WPS305,WPS319,WPS347,WPS410,WPS437
    doc/conf.py ALL
    setup.py
    scripts/
    tests/unit/contrib
    tests/unit/metrics

[options]
python_requires = >= 3.8

[metadata]
license_file = LICENSE
