[bumpversion]
current_version = 3.3.0.dev9
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)\.(?P<release>\D+)(?P<build>\d+)?
serialize = {major}.{minor}.{patch}.{release}{build}

[bumpversion:part:release]
values = dev

[bumpversion:part:build]
first_value = 0

[options]
python_requires = >= 3.8

[metadata]
license_file = LICENSE
